assets/css/rtl.css
/* ... */
/* loader style end here */
/* css tooltip start here  */
.ui-tooltip, .esign-arrow:after 
{
    background: black;
    border: 1px solid white;
    width:300px;
    position:fixed;
}

.ui-tooltip 
{
    padding: 10px 10px!important;
    color: white!important;
    border-radius: 5px!important;
    font: 13px "Helvetica Neue", Sans-Serif!important;
    text-transform: normal;
    background: #0c0e11!important;
    box-shadow: none!important;
    line-height:1.3em!important;
    max-width: 250px!important;
    min-width: auto !important;
    margin: 0 auto!important;
}

.esign-arrow 
{
    width: 70px;
    height: 16px;
    overflow: hidden;
    position: absolute;
    left: 50%;
    margin-left: 35px;
    bottom: -16px;
}

.esign-arrow.top 
{
    top: -16px;
    bottom: auto;
}

.esign-arrow.left
{
    left: 20%;
}

.esign-arrow:after 
{
    content: "";
    position: absolute;
    left: 20px;
    top: -20px;
    width: 25px;
    height: 25px;
    box-shadow: 6px 5px 9px -9px black;
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    tranform: rotate(45deg);
}

.esign-arrow.top:after 
{
    bottom: -20px;
    top: auto;
} 

/* esig document top part */

.esig_header_top
{ 
    margin-top:20px;
    display:inline-block;
    position:relative;
    width:100%;
}

.esig_top_left 
{   
    position:relative;
    float:left;
    display:inline-block ; 
    width:65% ;
} 

.esig_top_right
{ 
    position:relative;
    float:left;
    display:inline-block ;  
    width:35% ; 
    margin-top: 20px;
    margin-bottom: 10px;
} 

.col-sm-8
{
    max-width:345px;
    padding-left:0px !important;
}

.eisg-rtl-legally-signed
{
    position: absolute;
    left: 380px;
}

.rtl-site-name
{
    position: absolute;
    right:110px;   
}

#audit-trail-wrapper .main .info .sign
{
    position: absolute;
    left:1px;
}

#audit-trail-wrapper .main .info .user
{
    position: absolute;
    right:1px;  
}

.rtl-weapper
{
    position: absolute;
    right:-10px;    
}

.rtl-weapper-text
{
    position: relative;
    left:150px;   
}

#audit-trail-wrapper .main .info .bio
{
    position: relative;
    left:290px;    
}

#audit-trail-wrapper .document-info .left
{
  /*  position: relative; */
    left:250px;   
}

.rtl-sign-contracts
{
   /* position: relative;*/
    right:560px;     
}

#audit-trail-wrapper .main .checksum 
{
    position: relative;
    bottom: -50px;   
}

#audit-trail-wrapper .main .clearfix 
{
    position: relative;
    bottom: -70px;  
}

#esign_click_submit
{
    position: relative; 
    width:100%; 
}

.navbar-right 
{
    float: none !important;
    margin-right: -15px;
}

.agree-container
{
    position: relative;
    direction: rtl;
}

.esig-template-page .sig-tooltip.active 
{
    margin-top: -130px !important;
}

.instructions
{ 
    position: relative; 
    left:-10px; 
} 

.blog-url
{ 
    position: relative;  
    text-align: right; 
    float: right; 
}

.pull-right
{ 
    position: relative; 
}

.agree-container .esig-sitename
{
    text-shadow: none;
    position: relative;
    left:400px;
    top: 20px;
}

#downloadLink,#print-agree-button
{
    position: relative;
    left:-900px;  
}

/* audit trail pdf Document */
.document-sign-page #audit-trail-wrapper
{    
    margin-right: -30px;    
    margin-left: -30px;
}

#audit-trail-wrapper
{    
    font-family: "Open Sans", "sans-serif","chinese-msyh";    
    color: #575759;    
    max-width: 800px;    
    overflow : none;
}

#audit-trail-wrapper .right
{    
    float: left;
}

#audit-trail-wrapper .left
{    
    margin-right: 0px;    
    float: right;
}

#audit-trail-wrapper .clearfix
{    
    clear: both;
}

#audit-trail-wrapper img 
{    
    max-width: 100%;    
    height: auto;
}

#audit-trail-wrapper .header 
{    
    margin-bottom: 40px;
}

#audit-trail-wrapper .header,#audit-trail-wrapper .main 
{    
    margin: 10px;
}

#audit-trail-wrapper .header .caption 
{    
    font-size: 26px;    
    margin-bottom: 0px;
}

#audit-trail-wrapper .document-info
{    
    padding-bottom: 5px;    
    width: 100%;
}

#audit-trail-wrapper .document-info .left
{    
    width: 475px;
}

#audit-trail-wrapper .document-name
{    
    font-size: 16px;    
    margin-top: -5px;    
    margin-bottom: 1px;
}

#audit-trail-wrapper .document-name span
{    
    display: inline-block;    
    width: 330px;    
    white-space: nowrap;    
    overflow: hidden;    
    text-overflow: ellipsis;    
    vertical-align: bottom;
}

#audit-trail-wrapper .header .subcaption 
{   
     margin-bottom: 40px;    
     font-size: 13px;
}

#audit-trail-wrapper .header .subcaption .image-wrapper
{    
    padding-left: 5px;
}

#audit-trail-wrapper .header .subcaption img 
{    
    margin-top: -5px;    
    width: 11px;
}

#audit-trail-wrapper .header .subcaption span 
{    
    text-transform: uppercase;    
    font-size: 13px;
}

#audit-trail-wrapper .header .right 
{    
    font-weight: bold;    
    text-align: left;
}

#audit-trail-wrapper .main .info 
{    
    display:block;    
    position: relative;
}

#audit-trail-wrapper .main .info .user
{    
    width: 96px;
}

#audit-trail-wrapper .main .info .user img
{    
    border: 2px solid #EAEAEA;    
    padding: 0px;    
    max-width: 85px;
}

#audit-trail-wrapper .main .info .bio 
{    
    padding-right: 34px;    
    margin-top: -4px;    
    width: 370px;    
    box-sizing: border-box;
}

#audit-trail-wrapper .main .info .bio div:first-child 
{    
    font-size: 18px;
}

#audit-trail-wrapper .main .row 
{    
    margin-bottom: 15px;
}

#audit-trail-wrapper .main .info .bio div 
{    
    font-size: 12px;    
    font-weight: 100;
}

#audit-trail-wrapper .digital-signature-caption
{    
    padding-bottom: 10px;    
    font-weight: bold;
}
/* ... */

